--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 
 @import "./settings";
 @import "./component/navigation";
+@import "./component/burger";
 @import "./component/head";
 @import "./component/logo";
 @import "./component/intro";
