header page histoire (modèe header autres pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,5 @@
 @import "./components/intro";
 @import "./components/logo";
 @import "./components/article";
+@import "./components/headerPages";
+@import "./components/logoPages";
