--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -6,8 +6,10 @@
     width: 40px;
     height: 40px;
     right: 0;
-    top: 0;
+    top: 15px;
+    right: 15px;
     z-index: 2;
+    background-color: $color-3;
 }
 
 .button_burger span {
@@ -16,9 +18,10 @@
     background-color: $color-1;
     display: block;
     position: absolute;
-    top: 70%;
+    top: 50%;
+    left: 15%;
     transform: translateY(-50%);
-    transition: background-color 0.5s ease-in-out;
+    transition: background-color 0.5s;
 }
 
 /*top / bottom burger bar icon*/
@@ -60,9 +63,11 @@
 // }
 
 .burger-open {
+    position: absolute;
+    top: 0;
+    padding-top: 25%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     position: fixed;
     left: 0;
@@ -92,13 +97,13 @@
 }
 
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 750px) {
     .navigation {
         display: none;
     }
 }
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 750px) {
     .button_burger {
         display: none;
     }
