--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,6 +1,7 @@
 
 // width: calc(40% - 20px);
-$color-1: #EC9A8A;
+// $color-1: #ec9a8a;
+$color-1: #5EB7B7 ;
 $color-2: #FAF3F3;
 $color-3: #474747;
 
