--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import "./components/headerPages";
 @import "./components/logoPages";
 @import "./component/head";
+@import "./components/headerAsso";
