--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import "./components/logoPages";
 @import "./component/head";
 @import "./components/headerAsso";
+@import "./components/articleAsso";
