--- a/src/styles/components/_headerAsso.scss
+++ b/src/styles/components/_headerAsso.scss
@@ -18,14 +18,12 @@
         .span-asso {
             display: inline-block;
             color: $color-1;
-            font-size: 16px;
-            transform: rotate(360deg);
-            animation: 2s;
-            // background-color: #4747479e;
+            font-size: 18px;
+            background-color: #474747cc;
             padding: 5px 10px;
             margin-top: 10px;
-            font-weight: 600;
-            letter-spacing: 2px;
+            font-weight: 500;
+            letter-spacing: 1px;
         }
     }
 }
