page asso en respensive

--- a/src/styles/components/_articleAsso.scss
+++ b/src/styles/components/_articleAsso.scss
@@ -3,24 +3,24 @@
     flex-direction: column ;
     align-items: center;
     justify-content: center;
-    
+    align-content: center;
     figure {
         background-image: url(../../assets/img-asso/FigureAsso1.jpg);
         background-size: cover;
         background-position: center ;
-        width: 400px;
-        height: 300px;
+        width: 100vw;
+        height: 50vh;
+        margin: 0px;
+        margin-top: 2rem;
     }
     .Assowrap {
-        margin: 2rem;
-        
-        width: 65%;
+        width: 85%;
         padding: 15px 20px;
         color: $color-3;
         background-color: $color-2;
         opacity: 0.78;
         box-shadow: -2px -2px 2px 1px $color-1;
-        transform: translate(0%, -20%);
+        transform: translate(0%, -5%);
         h1 {
             font-size: 18px;
             letter-spacing: 1px;
@@ -38,15 +38,17 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
-        height: 50vh;
+        align-content: flex-start;
+        height: 100vh;
+        flex-direction: row;
         figure {
-            position: relative;
-            transform: translate(10%, 0%);
+            transform: translate(2%, 0%);
+            width: 45vw;
+            height: 35vh;
         }
         .Assowrap {
-            position: relative;
-            transform: translate(-10%, 20%);
-            width: 45%;
+            transform: translate(-2%, 100%);
+            width: 45vw;
         }
     }
 
