--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,5 @@
 @import "./component/head";
 @import "./components/headerAsso";
 @import "./components/articleAsso";
+@import "./components/articleAsso2";
+@import "./components/articleAssoP";
