--- a/src/styles/components/_articleAsso.scss
+++ b/src/styles/components/_articleAsso.scss
@@ -1,8 +1,22 @@
+.asso{
+    h1{
+        font-size: 3rem;
+        text-align: center;
+        letter-spacing: 2px;
+        font-weight: 600;
+        margin: 1.5rem;
+        color: $color-2;
+        span {
+            color: $color-1;
+            font-weight: 700;
+        }
+    }
+}
 .Asso1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     .figureAsso1 {
         figure{
             background-image: url(../../assets/img-asso/FigureAsso1.jpg);
@@ -11,7 +25,7 @@
             height: 35vh;
             width: 90vw;
             padding: 15px 20px;
-            margin: 2rem 0rem;
+            margin: 1rem 0rem;
         }
     }
     .AvantTout{
@@ -47,8 +61,10 @@
         margin: 0px;
         h1 {
             font-size: 18px;
+            text-align: center;
             letter-spacing: 1px;
             font-weight: 400;
+            color: $color-3;
         }
         p {
             line-height: 1.3;
@@ -71,6 +87,7 @@
         }
         .Assowrap {
             width: 35vw;
+            height: 25vh;
         }
     }
 
