histoire desktop ok

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,8 @@
 @import "./components/burger";
 @import "./components/intro";
 @import "./components/logo";
-@import "./components/article";
+@import "./component/article";
+@import "./components/articlesH";
 @import "./components/headerPages";
 @import "./components/logoPages";
 @import "./component/head";
