--- a/src/styles/component/_head.scss
+++ b/src/styles/component/_head.scss
@@ -5,7 +5,7 @@
     background-position: center bottom;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url("../../asset/header/headermobil.jpg");
+    background-image: url("../../assets/header/headermobil.jpg");
     p {
         text-align: center;
         font-size: 14px;
@@ -19,7 +19,7 @@
 
 @media screen and (min-width: 750px) {
     .head {
-        background-image: url("../../asset/header/header.jpg");
+        background-image: url("../../assets/header/header.jpg");
         padding-bottom: 100px;
     p {
         width: 40%;
