--- a/src/styles/components/_articlesH.scss
+++ b/src/styles/components/_articlesH.scss
@@ -1,18 +1,18 @@
-.article {
+.articleH {
     margin: 0 10px 50px;
         figure {
             width: 100%;
             margin: 0;
             background-position: center bottom;
             background-repeat: no-repeat;
+            background-size: contain;
         }
-        .wrap {
+        .wrapH {
             padding: 25px 30px;
             color: $color-3;
             background-color: $color-2;
             opacity: 0.78;
             border-top: solid 5px $color-1;
-
             h1 {
                 font-size: 18px;
                 letter-spacing: 1px;
@@ -25,6 +25,9 @@
             }
             p {
                 line-height: 1.3;
+                font-size: 14px;
+            }
+            li {
                 font-size: 14px;
             }
         }
@@ -42,20 +45,15 @@
         width: 100%;
     }
     ul {
-            width: 45%;
+        width: 45%;
         margin-block-start: 0;
         padding-inline-start: 0;
         margin: 0 5px;
         line-height: 2;
         font-size: 14px;
-    }
-}
-
-.Ai {
-    figure {
-        background-image: url(../../assets/articles/AiMobil.jpg);
-        background-size: contain;
-        height: 205px;
+        li {
+            font-size: 14px;
+        }
     }
 }
 
@@ -65,25 +63,19 @@
             font-weight: 700;
             color: $color-1;
         }
-        li {
-            font-size: 14px;
-        }
+
     }
 }
 
 .Hist1 {
     figure {
         background-image: url(../../assets/img-histoire/photoSenseiMobile.jpg);
-        background-size: contain;
-        background-position: center bottom;
         height: 400px;
     }
 }
 .Hist2 {
     figure {
         background-image: url(../../assets/img-histoire/physiqueMobile.png);
-        background-size: contain;
-        background-position: center bottom;
         height: 415px;
         width: 100%;
 
@@ -92,16 +84,12 @@
 .Hist3 {
     figure {
         background-image: url(../../assets/img-histoire/TechniqueMobile.jpg);
-        background-size: contain;
-        background-position: center bottom;
         height: 413px;
     }
 }
 .Hist4 {
     figure {
         background-image: url(../../assets/img-histoire/MoraleMobile.jpg);
-        background-size: contain;
-        background-position: center bottom;
         height: 420px;
     }
 }
@@ -127,12 +115,67 @@
 }
 
 @media screen and (min-width: 750px) {
-    .article {
-        .wrap {
-            margin: 0 40px;
+    .articleH {
+        margin: 50px 50px 0;
+        .wrapH {
+            width: 40%;
+            margin: 0 auto;
+            position: relative;
+            box-shadow: -5px -5px $color-1;
+            border-top: 0;
+            left: 50%;
+            transform: translate(-65%, -30%); 
+        }
+        figure {
+            border: 0;
+            position: relative;
+            left: 50%;
+            transform: translate(-80%, 0%);    
+            background-size: contain;
+            box-shadow: 5px 5px $color-2;
+        }
+        &:nth-of-type(odd) {
+            figure {
+                box-shadow: -5px 5px $color-2;
+                position: relative;
+                right: 50%;
+                transform: translate(-20%, 0%);    
+            }
+            .wrapH {
+                position: relative;
+                left: -65%;
+                transform: translate(100%, -30%);
+                box-shadow: 5px -5px $color-1;
+            }
         }
 }
+
+.Hist1 {
+    figure {
+        width: 306px;
+        height: 351px;
+    }
+}
+.Hist2 {
+    figure {
+        height: 394px;
+        width: 285px;
+
+    }
+}
+.Hist3 {
+    figure {
+        height: 389px;
+        width: 285px;
+    }
+}
+.Hist4 {
+    figure {
+        height: 380px;
+        width: 271px;
+    }
+}
 .valeursEduc p {
-    margin: 50px 40px;
+    margin: 50px 160px;
 }
 }
