--- a/src/styles/components/_articlesH.scss
+++ b/src/styles/components/_articlesH.scss
@@ -116,7 +116,7 @@
 
 @media screen and (min-width: 750px) {
     .articleH {
-        margin: 50px 50px 0;
+        margin: 0px 50px;
         .wrapH {
             width: 40%;
             margin: 0 auto;
