intégration page asso

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,7 @@
 @import "./components/headerPages";
 @import "./components/logoPages";
 @import "./component/head";
+@import "./components/headerAsso";
+@import "./components/articleAsso";
+@import "./components/articleAsso2";
+@import "./components/articleAssoP";
