--- a/src/styles/components/_headerAsso.scss
+++ b/src/styles/components/_headerAsso.scss
@@ -7,9 +7,10 @@
     background-repeat: no-repeat;
     background-image: url("../../assets/img-asso/imageHeaderAsso.jpg");
     height: 30vh;
+    
     p {
         text-align: center;
-        font-size: 20px;
+        font-size: 24px;
         padding: 20px;
         color: $color-3;
         font-weight: 700;
@@ -18,7 +19,7 @@
         .span-asso {
             display: inline-block;
             color: $color-1;
-            font-size: 24px;
+            font-size: 20px;
             background-color: #4747479e;
             padding: 5px 10px;
             margin-top: 10px;
@@ -32,6 +33,9 @@
     .headerAsso {
         padding-bottom: 100px;
         height: 40vh;
+        a{
+            color: $color-3;
+        }
     p {
         text-align: center;
         font-size: 15px;
@@ -40,6 +44,17 @@
         font-weight: 700;
         margin-top: 100px;
     }
+   
+}
+
+@media screen and (max-width : 750px) {
+    .headerAsso{
+        a{
+            color: white;
+        }
+    }
+    
+    
 }
 }
 @media screen and (min-width: 1024px) {
@@ -48,5 +63,6 @@
             width: 40%;
             margin: 130px auto 50px;
         }
+        
     }
 }
