--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./components/burger";
 @import "./components/intro";
 @import "./components/logo";
+@import "./component/logo";
 @import "./component/article";
 @import "./components/articlesH";
 @import "./components/headerPages";
