--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,4 @@
 @import "./components/articleAssoP";
 @import "./component/footer";
 @import "./component/form";
-@import "./component/scrolltop";
+// @import "./component/scrolltop";
