--- a/src/styles/component/_head.scss
+++ b/src/styles/component/_head.scss
@@ -6,6 +6,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("../../assets/header/headermobil.jpg");
+    // height: 60vh;
+
     p {
         text-align: center;
         font-size: 14px;
