--- a/src/styles/components/_headerHoraire.scss
+++ b/src/styles/components/_headerHoraire.scss
@@ -1,10 +1,10 @@
-.head {
-    padding: 25px 0 50px;
+.headHoraire {
+    padding: 25px 0 100px;
     margin: 0;
-    background-position: center bottom;
+    background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
     background-image: url("../../assets/articles/aikido1.png");
+    height: 50vh;
     p {
         text-align: center;
         font-size: 14px;
@@ -17,7 +17,7 @@
 }
 
 @media screen and (min-width: 750px) {
-    .head {
+    .headHoraire {
         background-image: url("../../assets/articles/aikido1.png");
         padding-bottom: 100px;
     p {
@@ -31,7 +31,7 @@
     }
 }
 @media screen and (min-width: 1024px) {
-    .head {
+    .headHoraire {
         p{
             width: 40%;
             margin: 50px auto;
