--- a/src/styles/component/_footer.scss
+++ b/src/styles/component/_footer.scss
@@ -1,47 +1,59 @@
+
 .main-footer {
-    font: "Roboto", sans-serif;
-    background: url(../../img/aikidman.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    bottom: 0;
-}
-
-h4 {
-    letter-spacing: 2px;
-    color: $color-3;
-}
-
-li {
-    list-style: none;
-    line-height: 2em;
-        a{
-            color: $color-3;
-        }
-    :hover {
-        color: $color-1;
-    }
-}
-
-a {
-    text-decoration: none;
-}
-.span{
-    font-weight: 400;
-    font: $color-3;
-}
-
-.row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 40px 20px;
-    ul{
+    &::before {
+        content: "";
+        display: block;
+        background-color: red;
+        height: 100px;
+        width: 100px;
+        position: relative;
+        top: -100px;
+        left: 0;
+        display: none;
+    }
+    div {
         width: 50%;
-    }
-    .bot {
-        width :50%;
         text-align: center;
+        ul {
+            text-decoration: none;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            li {
+                a {
+                    color: $color-3;
+                    text-decoration: none;
+                    display: block;
+                    font-size: 16px;
+                    padding: 10px 5px;
+                }
+            }
+        }
     }
-    
+    .row-small {
+        width: 100%;
+        font-size: 12px;
+        order: 1;
+    }
+    .contact {
+        order: 1;
+        width: 100%;
+    }
+    .social {
+        margin: 0 auto;
+    }
+}
+@media screen and (min-width: 500px) {
+    .main-footer {
+        .contact {
+                width: 33%;
+            }
+            div {
+                width: 33%
+            }
+
+    }
     
 }
