--- a/src/styles/components/_intro.scss
+++ b/src/styles/components/_intro.scss
@@ -1,10 +1,12 @@
 .intro {
     height: 90px;
     display: block;
-    margin: 50px auto;
+    margin: 0px auto;
+    padding: 50px;
 }
 @media screen and (min-width: 750px) {
     .intro {
         height: 120px;
+        padding: 50px;
     }
 }
