--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,6 @@
 @import "./components/articleAsso2";
 @import "./components/articleAssoP";
 @import "./components/horaire";
-@import "./components/Button.scss";
+@import "./components/button";
 @import "./component/footer";
 @import "./component/form";
