--- a/src/styles/components/_articleAsso2.scss
+++ b/src/styles/components/_articleAsso2.scss
@@ -13,7 +13,7 @@
         }
         p{
             text-align: center;
-            color: $color-2;
+            color: $color-3;
             span {
                 color: $color-1;
                 font-weight: 700;
@@ -21,8 +21,7 @@
             margin: 0px;
             padding-top: .7rem;
         }
-        width: 50vw;
-        height: 25vh;
+        width:100%;
         margin: 1rem 0rem;
     }
 }
