--- a/src/styles/components/_headerAsso.scss
+++ b/src/styles/components/_headerAsso.scss
@@ -20,7 +20,7 @@
             display: inline-block;
             color: $color-1;
             font-size: 20px;
-            background-color: #4747479e;
+            background-color: $color-3;
             padding: 5px 10px;
             margin-top: 10px;
             font-weight: 500;
@@ -32,15 +32,14 @@
 @media screen and (min-width: 750px) {
     .headerAsso {
         padding-bottom: 100px;
-        height: 40vh;
+        height: 30vh;
         a{
             color: $color-3;
         }
     p {
         text-align: center;
-        font-size: 15px;
+        font-size: 28px;
         padding: 20px;
-        color: $color-3;
         font-weight: 700;
         margin-top: 100px;
     }
@@ -60,7 +59,7 @@
 @media screen and (min-width: 1024px) {
     .headerAsso {
         p{
-            width: 40%;
+            width: 60%;
             margin: 130px auto 50px;
         }
         
