page accueil au top

--- a/src/styles/component/_footer.scss
+++ b/src/styles/component/_footer.scss
@@ -2,6 +2,7 @@
 .main-footer {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 50px;
     &::before {
         content: "";
         display: block;
