--- a/src/styles/components/_intersection.scss
+++ b/src/styles/components/_intersection.scss
@@ -1,6 +1,5 @@
 .inter, .inter2, .interhisto {
     background-color: $color-3;
-    margin-top: 100px;
     padding-top: 50px;
     .center {
         background-color: $color-3;
@@ -17,10 +16,29 @@
             max-width: 600px;
         }
      }
+     h1 {
+         text-align: center;
+         font-size: 18px;
+         width: 80%;
+         margin: 0 auto;
+         span {
+            //  text-transform: uppercase;
+             color: $color-1;
+             display: inline-block;
+             font-size: 30px;
+             margin: 10px;
+             padding: 0px 5px;
+             background-color: $color-3;
+             box-shadow: -3px 4px 0px 0px $color-1;
+             font-family: 'Reem Kufi', sans-serif;
+         }
+
+     }
 
     }
 
 .inter {
+    margin-top: 100px;
     .center {
         background-color: $color-3;
         color: $color-2;
@@ -79,6 +97,12 @@
         .center {
             a {
             margin-left: 60%;
+            }
+            h1 {
+                font-size: 30px;
+                span {
+                    font-size: 40px;
+                }
             } 
         }
         
