--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,6 @@
 @import "./components/articleAssoP";
 @import "./components/horaire";
 @import "./components/Button.scss";
+@import "./components/headerHoraire";
+@import '~react-agenda/build/styles.css';
+@import '~react-datetime/css/react-datetime.css';
