--- a/src/styles/components/_articleAssoP.scss
+++ b/src/styles/components/_articleAssoP.scss
@@ -1,27 +1,41 @@
-.Asso3Bis{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: space-around;
-    justify-content: space-around;
-    align-items: center;
-    .flip:hover{
-        transform: rotateY(180deg);
+.Asso3{
+    h2{
+        text-align: center;
+        color: $color-3;
+        span {
+            color: $color-1;
+            font-weight: 700;
+        }
+        margin: 1rem;
+        padding-top: .7rem;
     }
+    .MuiGrid-root{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
     .flip{
-        // position: absolute;
         transform-style: preserve-3d;
-        transition: all 0.5s ease;
+        transition: all 0.8s ease;
         width: 220px;
         height: 300px;
         box-shadow: -2px -2px 2px 1px $color-1;
-        margin: 1rem;
+        margin: 2em 5%;
         
         .Devant{
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
-            background-color: rgb(163, 163, 163);
+            // background-color: rgb(163, 163, 163);
+            .NomPerso{
+                font-size: 18px;
+                text-align: center;
+                letter-spacing: 1px;
+                font-weight: 800;
+                color: $color-1;
+            }
         }
         .Derriere{
             position: absolute;
@@ -29,6 +43,10 @@
             height: 100%;
             background-color: rgba(163, 1, 1, 0.555);
             transform: rotateY(180deg);
+            backface-visibility: hidden;
         }
+    }
+    .flip:hover{
+        transform: rotateY(180deg);
     }
 }
