form en construction

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,5 +16,5 @@
 @import "./components/horaire";
 @import "./components/button";
 @import "./component/footer";
-@import "./component/form";
-@import "./components/intersection"
+@import "./components/intersection";
+@import "./components/form";
