--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,6 +1,6 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-}
+// *, *::before, *::after {
+//     box-sizing: border-box;
+// }
 
 .table {
     margin-top: 40px;
