--- a/src/styles/components/_articlesH.scss
+++ b/src/styles/components/_articlesH.scss
@@ -8,7 +8,7 @@
             background-size: contain;
         }
         .wrapH {
-            padding: 25px 30px;
+            padding: 25px 30px 0;
             color: $color-3;
             background-color: $color-2;
             border-top: solid 5px $color-1;
@@ -94,10 +94,12 @@
 }
 .valeursEduc {
     display: flex;
-    padding: 20px;
+    padding: 30px 20px 0;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: $color-3;
+    margin-bottom: 50px;
     .imgValeursEduc {
         height: 100px;
     }
