--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,18 +1,22 @@
 .contactForm {
-        display: flex;
-        margin-top:50px;
-        width: 50%;
+        display: block;
+        width: 60%;
         background-color: $color-3;
         background-position: center;
         background-size: cover;
+        margin: 50px auto;
         h1 {
-            flex-direction: column;
+            display: flex;
             margin-top:25px;
             color: $color-1;
-
+            justify-content: center;
+            padding-top: 50px;
         }
         .row {
+            display: flex;
+            flex-direction: column;
             margin:25px 85px 75px 100px;
+            padding: 20px;
         }
         .btn-primary {
             margin-top: 30px;
