--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -15,8 +15,7 @@
         .row {
             display: flex;
             flex-direction: column;
-            margin:25px 85px 75px 100px;
-            padding: 20px;
+            padding: 30px 20px;
         }
         .btn-primary {
             margin-top: 30px;
