--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,23 +1,155 @@
-.contactForm {
-        display: block;
-        width: 60%;
-        background-color: $color-3;
-        background-position: center;
-        background-size: cover;
-        margin: 50px auto;
-        h1 {
-            display: flex;
-            margin-top:25px;
+// *{
+//     outline: none;
+// }
+.contact {
+    .logosPages {
+        margin-bottom: 30px;
+    }
+    .navigation {
+        margin-top: 30px;
+        padding: 10px;
+        a{
+        color: $color-3;
+        border-right: $color-3;
+        border-right: solid 2px $color-3;
+        &:hover {
+            background-color: $color-3;
             color: $color-1;
-            justify-content: center;
-            padding-top: 50px;
         }
-        .row {
-            display: flex;
-            flex-direction: column;
-            padding: 30px 20px;
         }
-        .btn-primary {
-            margin-top: 30px;
-        }
+}
+}
+.main{
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    justify-content: space-around;
+    background: url(../../img/lavallée.jpg) no-repeat;
+    background-position: left;
+    background-size: cover;
+    // border-radius: 2%;
+    height: 500px;
+    padding: 50px;
+}
+h2{
+    color: $color-1;
+}
+.contact1{
+    text-align: center;
+    padding: 60px 0;
+    width: 40%;
+}
+
+.form-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100px 224px;
+    grid-template-areas: 
+    "input1 input2"
+    "textarea textarea";
+    gap: 30px;
+    width: 85%;
+    margin: 30px auto;
+    max-width: 600px;
+}
+.textarea{
+    grid-area: textarea;
+}
+
+label{
+    color: $color-1;
+    font-weight: 600;
+    font-size: 0.8 rem;
+    letter-spacing: 1px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    margin: 20px 0 40px;
+    border-radius: 4px;
+    box-shadow: -3px 4px 0px 0px #5eb7b7;
+    border: none;
+    padding: 10px;
+    transition: 0.2s;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus{
+    border: 2px solid #5EB7B7;
+}
+
+.button {
+    border: none;
+    background: transparent;
+    box-shadow: 3px 4px 0px 0px #5eb7b7;
+    padding: 13px 30px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    font:700 0.75rem;
+    color: $color-1;
+}
+
+
+textarea{
+    resize: none;
+    height: 180px;
+}
+
+
+// :::::::::::::::::::ANIMATION:::::::::::::::::::://
+.words {
+    color: $color-1;
+    font-size: 0;
+    line-height: 1.5;
+}
+
+.words span {
+    font-size: 3rem;
+    display: inline-block;
+    animation: move 3s ease-in-out infinite;
+}
+
+@keyframes move {
+    0% {
+    transform: translate(-30%, 0);
+    }
+    50% {
+    text-shadow: 0 25px 50px rgba(0, 0, 0, 0.75);
+    }
+    100% {
+    transform: translate(30%, 0);
+    }
+}
+.words span:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.words span:nth-child(3) {
+    animation-delay: 1s;
+}
+
+.words span:nth-child(4) {
+    animation-delay: 1.5s;
+}
+
+.words span:nth-child(5) {
+    animation-delay: 2s;
+}
+
+.words span:nth-child(6) {
+    animation-delay: 2.5s;
+}
+
+.words span:nth-child(7) {
+    animation-delay: 3s;
+}
+@media screen and (max-width: 750px) {
+    .words {
+        display: none;
+    }
 }
