--- a/src/styles/components/_headerHoraire.scss
+++ b/src/styles/components/_headerHoraire.scss
@@ -1,23 +1,21 @@
 .headHoraire {
     padding: 25px 0 100px;
     margin: 0;
-    background-position: center;
+    background-position: top right;
     background-size: cover;
-    background-image: url("../../assets/articles/aikido1.png");
-    p {
+    background-image: url("../../assets/horaire/headerhoraires.jpg");
+    h1 {
         text-align: center;
-        font-size: 14px;
+
+        font-size: 22px;
         padding: 0 20px;
         color: $color-2;
-        span {
-            color: $color-1;
-        }
+        margin-top: 150px;
     }
 }
 
 @media screen and (min-width: 750px) {
     .headHoraire {
-        background-image: url("../../assets/articles/aikido1.png");
         padding-bottom: 100px;
     p {
         width: 40%;
