--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,4 @@
 @import "./component/footer";
 @import "./components/intersection";
 @import "./components/form";
+@import "./component/articlehoraires";
