--- a/src/styles/component/_article.scss
+++ b/src/styles/component/_article.scss
@@ -29,6 +29,12 @@
             }
         }
     }
+.As{
+    figure{
+        background-image: url(../../assets/img-asso/FigureAsso1.jpg);
+    }
+    
+}
 .Ai {
     figure {
         background-image: url(../../assets/articles/AiMobil.jpg);
