--- a/src/styles/components/_articleAssoP.scss
+++ b/src/styles/components/_articleAssoP.scss
@@ -1,18 +1,53 @@
 .Asso3{
+    font-family: 'Reem Kufi', sans-serif;
+    .Assow{
+        width: 100%;
+        height: 12.5rem;
+        background-color: $color-3;
+        margin-bottom: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        h2{
+            margin: auto;
+            font-size: 30px;
+            text-align: center;
+            color: $color-2;
+            margin: 1rem;
+            padding: .7rem;
+            
+            span{
+                color: #5EB7B7;
+                display: inline-block;
+                font-size: 30px;
+                margin: 10px;
+                padding: 0px 5px;
+                box-shadow: -3px 4px 0px 0px #5eb7b7;
+                
+            }
+        }
+    }
     h2{
         text-align: center;
-        color: $color-3;
-        span {
-            color: $color-1;
-            font-weight: 700;
-        }
+        color: $color-2;
         margin: 1rem;
-        padding-top: .7rem;
+        padding: .7rem;
+    }
+    h3{
+        color: $color-1;
+        text-align: center;
+        padding: .7rem;   
     }
     .MuiGrid-root{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+    }
+    p{
+        text-align: center;
+        color: $color-2;
+        margin: 1rem;
+        padding: .7rem;
     }
     
     .flip{
@@ -20,30 +55,38 @@
         transition: all 0.8s ease;
         width: 220px;
         height: 300px;
-        box-shadow: -2px -2px 2px 1px $color-1;
+        // box-shadow: -2px -2px 2px 1px $color-1;
+        border-top: solid 5px $color-1;
+        border-right: solid 5px $color-1;
         margin: 2em 5%;
+        border-radius: 1.3px;
         
         .Devant{
             position: absolute;
             width: 100%;
             height: 100%;
             backface-visibility: hidden;
-            // background-color: rgb(163, 163, 163);
-            .NomPerso{
-                font-size: 18px;
-                text-align: center;
-                letter-spacing: 1px;
-                font-weight: 800;
-                color: $color-1;
-            }
+            background-color: $color-3;
+            border-radius: 1px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex-wrap: nowrap;
+
         }
         .Derriere{
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: rgba(163, 1, 1, 0.555);
+            background-color: $color-3;
             transform: rotateY(180deg);
             backface-visibility: hidden;
+            border-radius: 1px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            flex-wrap: nowrap;
+
         }
     }
     .flip:hover{
