--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,4 @@
 @import "./components/headerHoraire";
 @import '~react-agenda/build/styles.css';
 @import '~react-datetime/css/react-datetime.css';
+@import './components/Footer.scss';
