--- a/src/styles/components/_headerHoraire.scss
+++ b/src/styles/components/_headerHoraire.scss
@@ -1,33 +1,32 @@
 .headhoraire {
     padding: 25px 0 50px;
     margin: 0;
-    background-position: center bottom;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url("../../assets/header/header.jpg");
-    height: 40vh;
+    background-image: url("../../assets/articles/adultes1.jpg");
     h1 {
         text-align: center;
-        font-size: 20px;
+        font-size: 16px;
+        padding: 25px 0 0;
+        position: relative;
         font-weight: bold;
-        padding: 0 20px;
-        color: $color-1;
+        color: $color-2;
         text-transform: uppercase;
     }
 }
 
 @media screen and (min-width: 750px) {
     .headhoraire {
-        background-image: url("../../assets/articles/adultes1.jpg");
+        background-image: url("../../assets/articles/adultes2.jpg");
         padding-bottom: 100px;
-        height: 80vh;
+        height: 70vh;
     h1 {
-        width: 40%;
         margin: 0 auto;
         font-weight: 700;
         letter-spacing: 1px;
         font-size: 20px;
-        padding: 0 100px;
+        padding-top: 0px;
         margin-top: 100px;
     }
     }
@@ -35,7 +34,7 @@
 @media screen and (min-width: 1024px) {
     .headhoraire {
         h1{
-            width: 40%;
+            padding-top: 150px;
             margin: 50px auto;
         }
     }
