--- a/src/styles/components/_intersection.scss
+++ b/src/styles/components/_intersection.scss
@@ -43,6 +43,20 @@
         background-color: $color-3;
         color: $color-2;
         padding-bottom: 50px;
+        a {
+        box-shadow: 3px 4px 0px 0px $color-1;
+        padding: 10px 20px;
+        // position: relative;
+        display: block;
+        margin-left: 50%;
+        width: 100px;
+        text-align: center;
+        text-decoration: none;
+        color: $color-2;
+        text-transform: uppercase;
+        font-size: 12px;
+        margin-top: 50px;
+    }
     }
 }
 
@@ -78,7 +92,6 @@
     a {
         box-shadow: 3px 4px 0px 0px $color-1;
         padding: 10px 20px;
-        // position: relative;
         display: block;
         margin-left: 50%;
         width: 100px;
